Fix alignment again

--- a/docs/src/components/Accordion.css
+++ b/docs/src/components/Accordion.css
@@ -42,7 +42,7 @@
     position: relative;
     display: flex;
     width: 100%;
-    min-height: 2.25rem;
+    min-height: 2.5rem;
     align-items: baseline;
     /* make padding match TableCell height */
     padding-block: 0.5rem;
